# generaite_todo_app_1

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  Cargo.toml
config/: default.toml  development.toml  production.toml  test.toml
design/: documentation_plan.md  folder_structure.md  test_strategy.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/cli/: create_db.rs
tasks/: project_setup.md  user_story_tasks.md
tests/: hello_world.rs  utils.rs
